--- a/CC.ipynb
+++ b/CC.ipynb
@@ -6,11 +6,246 @@
    "source": [
     "CC Benjamin LE BERRE Quentin GOUBY OLLIVIER"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Énoncé 1 : Manipulation de chaînes (10 points)\n",
+    "Soit la chaine de caractères suivante :\n",
+    "\n",
+    "\n",
+    "MaChaine= \"abcdefghijklmnopqrstuvwxyz\" * N\n",
+    "\n",
+    "\n",
+    "N est un paramètre entier saisi par l’utilisateur et est supérieur ou égal à 5.\n",
+    "\n",
+    "\n",
+    "Ecrire un programme en Python 3.x permettant en utilisant des fonctions de :\n",
+    "1. Créer et d’initialiser toute chaine de caractères dont MaChaine.\n",
+    "2. Afficher la chaine MaChaine.\n",
+    "3. Recopier les 17 derniers caractères de MaChaine dans TaChaine.\n",
+    "4. Transformer Machaine de manière à contenir alternativement un caractère en minuscule et le suivant en majuscule.\n",
+    "5. Inverser la chaine MaChaine puis l’afficher.\n",
+    "6. Construire une pyramide avec TaChaine puis l’afficher.\n",
+    "7. Rechercher une sous chaine dont la taille est paramétrable dans TaChaine en affichant cette taille.\n",
+    "8. Transformer TaChaine en une liste triée puis l’afficher."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Énoncé 2 : Manipulation de listes (10 points)\n",
+    "\n",
+    "\n",
+    "Ecrire un programme en langage Python 3.x permettant de :\n",
+    "1. Créer et d’initialiser une liste liste1 d’entiers d’une taille paramétrable supérieure à 20.\n",
+    "2. Créer et d’initialiser une liste liste2 d’entiers d’une taille paramétrable copiant les entiers impairs de liste1.\n",
+    "3. Utiliser une fonction affichant les 2 listes triées dans un ordre décroissant.\n",
+    "4. Utiliser une fonction ajoutant un ou plusieurs entiers à liste1 en fin de liste ou dans  emplacement spécifique.\n",
+    "5. Utiliser une fonction supprimant de liste1 toutes les occurrences d’un entier entré par l’utilisateur.\n",
+    "6. Créer une liste liste3 avec des éléments aléatoires de liste1 et liste2.\n",
+    "7. Utiliser une fonction qui permet d’inverser toute liste dont la liste3.\n",
+    "8. Utiliser une fonction qui prend en paramètres les deux listes liste1 et liste2 et renvoyant une liste contenant deux sous listes (l_pairs, l_impairs), I_pairs représente tous les éléments d’indices pairs de Liste2 et I_impairs représente tous les éléments d’indices impaires de liste1.\n",
+    "9. Fournir la trace d’exécution claire étape par étape."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 1 : Liste 1 : \n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]\n",
+      "Question 2 : Liste 2 : \n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "Question 3 : Liste 1 et Liste 2 triées en ordre décroissant : \n",
+      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[19, 17, 15, 13, 11, 9, 7, 5, 3, 1]\n",
+      "Question 4 : Liste 1 avec le nombre ajouté : \n",
+      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 10]\n",
+      "Question 5 : Liste 1 sans le nombre supprimé : \n",
+      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "Question 6 : Liste 3 : \n",
+      "[8, 19, 17, 7, 36, 29, 2, 37, 35, 20, 32, 1, 23, 6, 15, 21, 5, 30, 23, 26, 23, 16, 35, 39, 14, 26, 31, 25, 34, 16, 11, 5, 40, 13, 4, 18, 13, 37, 8, 13, 7, 5, 17, 17, 13, 9, 5, 13, 7]\n",
+      "Questions 7 : Liste inversée \n",
+      "[7, 13, 5, 9, 13, 17, 17, 5, 7, 13, 8, 37, 13, 18, 4, 13, 40, 5, 11, 16, 34, 25, 31, 26, 14, 39, 35, 16, 23, 26, 23, 30, 5, 21, 15, 6, 23, 1, 32, 20, 35, 37, 2, 29, 36, 7, 17, 19, 8]\n",
+      "Question 8 : Liste des nombres pairs et impairs : \n",
+      "[19, 15, 11, 7, 3]\n",
+      "[39, 37, 35, 33, 31, 29, 27, 25, 23, 21, 19, 17, 15, 13, 11, 8, 6, 4, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "### 1 ###\n",
+    "Liste1 = []\n",
+    "input1 = input(\"Entrez un nombre supérieur à 20: \")\n",
+    "if int(input1) < 20:\n",
+    "    print(\"Le nombre est inférieur à 20.\")\n",
+    "else:\n",
+    "    for i in range(1, int(input1)+1):\n",
+    "        Liste1.append(i)\n",
+    "    print(\"Question 1 : Liste 1 : \")\n",
+    "    print(Liste1)\n",
+    "\n",
+    "\n",
+    "### 2 ###\n",
+    "Liste2 = []\n",
+    "impairs = []\n",
+    "input2 = input(\"Entrez un nombre inférieur à \"+input1+\": \") ## Il faut décider si le nombre doit etre egal a input1 divisé par 2 ou non car il y a que 15 nb impairs dans 30\n",
+    "if int(input2) > int(input1):\n",
+    "    print(\"Le nombre est supérieur à \"+input1+\".\")\n",
+    "else:\n",
+    "    #ajouter uniquement les nombres impairs en ajoutant le nombre de valeurs dans input2\n",
+    "    for x in Liste1:\n",
+    "        if x % 2 != 0:\n",
+    "            impairs.append(x)\n",
+    "    Liste2 = impairs[:int(input2)]\n",
+    "    print(\"Question 2 : Liste 2 : \")\n",
+    "    print(Liste2)\n",
+    "\n",
+    "### 3 ###\n",
+    "Liste1.sort(reverse=True)\n",
+    "Liste2.sort(reverse=True)\n",
+    "print(\"Question 3 : Liste 1 et Liste 2 triées en ordre décroissant : \")\n",
+    "print(Liste1)\n",
+    "print(Liste2)\n",
+    "\n",
+    "### 4 ###\n",
+    "\n",
+    "def ajout_liste1():\n",
+    "    ajout = input(\"Entrez un nombre à ajouter à la liste: \")\n",
+    "    Liste1.append(int(ajout))\n",
+    "    print(\"Question 4 : Liste 1 avec le nombre ajouté : \")\n",
+    "    print(Liste1)\n",
+    "\n",
+    "def ajout_liste1_emplacement():\n",
+    "    ajout = input(\"Entrez un nombre à ajouter à la liste: \")\n",
+    "    emplacement = input(\"Entrez un emplacement pour ajouter le nombre: \")\n",
+    "    Liste1.insert(int(emplacement), int(ajout))\n",
+    "    print(\"Question 4 : Liste 1 avec le nombre ajouté à l'emplacement spécifique : \")\n",
+    "    print(Liste1)\n",
+    "\n",
+    "def choix ():\n",
+    "    choix = input(\"Voulez-vous ajouter un nombre à la fin de la liste ou à un emplacement spécifique? (fin = f ou e = emplacement): \")\n",
+    "    if choix == \"f\":\n",
+    "        ajout_liste1()\n",
+    "    elif choix == \"e\":\n",
+    "        ajout_liste1_emplacement()\n",
+    "    else:\n",
+    "        print(\"Choix invalide.\")\n",
+    "        choix()\n",
+    "\n",
+    "choix()\n",
+    "\n",
+    "### 5 ###\n",
+    "def supprimer_liste1():\n",
+    "    supprimer = input(\"Entrez un nombre à supprimer de la liste: \")\n",
+    "    for i in Liste1:\n",
+    "        if i == int(supprimer):\n",
+    "            Liste1.remove(int(supprimer))\n",
+    "    print(\"Question 5 : Liste 1 sans le nombre supprimé : \")\n",
+    "    print(Liste1)\n",
+    "\n",
+    "supprimer_liste1()\n",
+    "\n",
+    "### 6 ###\n",
+    "Liste3 = []\n",
+    "def liste3():\n",
+    "    import random\n",
+    "    for i in range(0, len(Liste1)):\n",
+    "        Liste3.append(random.choice(Liste1))\n",
+    "    for i in range(0, len(Liste2)):\n",
+    "        Liste3.append(random.choice(Liste2))\n",
+    "    print(\"Question 6 : Liste 3 : \")\n",
+    "    print(Liste3)\n",
+    "\n",
+    "liste3()\n",
+    "\n",
+    "### 7 ###\n",
+    "### Est qu'il faut choisir la liste que l'on veut inverser ou est-ce que c'est la liste3 qui doit etre inversée?\n",
+    "def inverser_liste():\n",
+    "    Liste3.reverse()\n",
+    "    print(\"Questions 7 : Liste inversée \")\n",
+    "    print(Liste3)\n",
+    "\n",
+    "inverser_liste()\n",
+    "\n",
+    "### 8 ###\n",
+    "def indices_pairs_impairs(Liste1, Liste2):\n",
+    "    l_pairs = []\n",
+    "    l_impairs = []\n",
+    "    for i in range(len(Liste2)):\n",
+    "        if i % 2 == 0:\n",
+    "            l_pairs.append(Liste2[i])\n",
+    "    for i in range(len(Liste1)):\n",
+    "        if i % 2 != 0:\n",
+    "            l_impairs.append(Liste1[i])\n",
+    "    print(\"Question 8 : Liste des nombres pairs et impairs : \")\n",
+    "    print(l_pairs,)\n",
+    "    print( l_impairs)\n",
+    "\n",
+    "indices_pairs_impairs(Liste1, Liste2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Énoncé 3 : Manipulation de dictionnaires (20 points)\n",
+    "\n",
+    "\n",
+    "Ecrire un programme en langage Python 3.x permettant de créer le dictionnaire My_PC qui permet le stockage des informations décrivant la configuration (5 paramètres : exemple processeur et quantité de RAM…) d'un ensemble d’ordinateurs/PC/serveurs :\n",
+    "1. Proposer une création et une initialisation interactive de My_PC.\n",
+    "2. Afficher par une fonction paramétrable les clés de My_PC\n",
+    "3. Afficher par une fonction paramétrable les valeurs de My_PC\n",
+    "4. Proposer une fonction permettant l’extraction des clés dans une liste.\n",
+    "5. Proposer une fonction permettant l’extraction des valeurs dans une liste.\n",
+    "6. Proposer une fonction permettant la correction de quantité de RAM.\n",
+    "7. Proposer une fonction permettant le tri de My_PC selon la quantité de sockage.\n",
+    "8. Proposer une fonction permettant d’inverser deux paramètres du dictionnaire.\n",
+    "9. Proposer une fonction permettant la sauvegarde de My_PC dans un autre dictionnaire CP_MyPC.\n",
+    "10. Proposer une fonction affichant le PC le plus performant de My_PC.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
