--- a/CC.ipynb
+++ b/CC.ipynb
@@ -34,10 +34,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 2:\n",
+      "abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz\n",
+      "\n",
+      "\n",
+      "Question 3:\n",
+      "jklmnopqrstuvwxyz\n",
+      "\n",
+      "\n",
+      "Question 4:\n",
+      "AbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYz\n",
+      "\n",
+      "\n",
+      "Question 5:\n",
+      "zYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbA\n",
+      "\n",
+      "\n",
+      "Question 6:\n",
+      "j\n",
+      "jk\n",
+      "jkl\n",
+      "jklm\n",
+      "jklmn\n",
+      "jklmno\n",
+      "jklmnop\n",
+      "jklmnopq\n",
+      "jklmnopqr\n",
+      "jklmnopqrs\n",
+      "jklmnopqrst\n",
+      "jklmnopqrstu\n",
+      "jklmnopqrstuv\n",
+      "jklmnopqrstuvw\n",
+      "jklmnopqrstuvwx\n",
+      "jklmnopqrstuvwxy\n",
+      "jklmnopqrstuvwxyz\n",
+      "\n",
+      "\n",
+      "Question 7:\n",
+      "jklmno\n",
+      "klmnop\n",
+      "lmnopq\n",
+      "mnopqr\n",
+      "nopqrs\n",
+      "opqrst\n",
+      "pqrstu\n",
+      "qrstuv\n",
+      "rstuvw\n",
+      "stuvwx\n",
+      "tuvwxy\n",
+      "uvwxyz\n",
+      "\n",
+      "\n",
+      "Question 8 bis:\n",
+      "['j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "N=int(input(\"Entrez un nombre entier égal ou supérieur à 5: \"))\n",
+    "while N < 5:\n",
+    "    N = int(input(\"N doit être supérieur ou égal à 5. Entrez à nouveau N : \"))\n",
+    "\n",
+    "# 1. Créer et d’initialiser toute chaine de caractères dont MaChaine.\n",
+    "\n",
+    "MaChaine= \"abcdefghijklmnopqrstuvwxyz\" * N\n",
+    "\n",
+    "# 2. Afficher la chaine MaChaine.\n",
+    "print(\"Question 2:\")\n",
+    "print(MaChaine)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 3. Recopier les 17 derniers caractères de MaChaine dans TaChaine.\n",
+    "\n",
+    "TaChaine= MaChaine[-17:] # On prend les 17 derniers caractères de MaChaine\n",
+    "print(\"Question 3:\")\n",
+    "print(TaChaine)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 4. Transformer Machaine de manière à contenir alternativement un caractère en minuscule et le suivant en majuscule.\n",
+    "\n",
+    "for i in range(0, len(MaChaine), 2): # On commence à 0 et on incrémente de 2\n",
+    "    MaChaine= MaChaine[:i] + MaChaine[i].upper() + MaChaine[i+1:] # On met en majuscule le caractère à l'indice i et on le remet dans la chaine MaChaine\n",
+    "print(\"Question 4:\")\n",
+    "print(MaChaine)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 5. Inverser la chaine MaChaine puis l’afficher.\n",
+    "\n",
+    "MaChaine= MaChaine[::-1] # On inverse la chaine\n",
+    "print(\"Question 5:\")\n",
+    "print(MaChaine)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 6. Construire une pyramide avec TaChaine puis l’afficher.\n",
+    "print(\"Question 6:\")\n",
+    "for i in range(1, len(TaChaine)+1): # On commence à 1 et on incrémente de 1 jusqu'à la taille de TaChaine\n",
+    "    print(TaChaine[:i]) # On affiche les i premiers caractères de TaChaine\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 7. Rechercher une sous chaine dont la taille est paramétrable dans TaChaine en affichant cette taille.\n",
+    "print(\"Question 7:\")\n",
+    "taille= int(input(\"Entrez une taille de sous-chaine: \"))\n",
+    "while taille > len(TaChaine):  # On s'assure que la taille demandée est inférieure ou égale à la taille de TaChaine\n",
+    "    taille = int(input(\"a taille de la sous-chaîne ne peut pas être plus grande que la longueur de TaChaine. Entrez une nouvelle taille de sous-chaine : \"))\n",
+    "for i in range(len(TaChaine)-taille+1): # On parcourt TaChaine jusqu'à la taille de TaChaine - la taille de la sous-chaine + 1 pour ne pas dépasser la taille de TaChaine\n",
+    "    print(TaChaine[i:i+taille]) # On affiche la sous-chaine de taille taille à partir de l'indice i\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 8. Transformer TaChaine en une liste triée puis l’afficher.\n",
+    "\n",
+    "TaChaine= list(TaChaine) # On transforme TaChaine en liste\n",
+    "TaChaine.sort() # On trie la liste\n",
+    "print(\"Question 8:\")\n",
+    "print(TaChaine)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Question 7 bis\n",
+    "\n",
+    "# sous_chaine_taille = int(input(\"Entrez la taille de la sous-chaîne à rechercher : \"))\n",
+    "# while sous_chaine_taille > len(TaChaine):\n",
+    "#     sous_chaine_taille = int(input(\"La taille doit être inférieure ou égale à la longueur de TaChaine. Entrez à nouveau la taille : \"))\n",
+    "\n",
+    "# sous_chaine = TaChaine[:sous_chaine_taille]\n",
+    "# print(f\"Sous-chaîne de taille {sous_chaine_taille} : {sous_chaine}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
