--- a/CC.ipynb
+++ b/CC.ipynb
@@ -145,12 +145,13 @@
     "\n",
     "# 7. Rechercher une sous chaine dont la taille est paramétrable dans TaChaine en affichant cette taille.\n",
     "print(\"Question 7:\")\n",
-    "taille= int(input(\"Entrez une taille de sous-chaine: \"))\n",
-    "while taille > len(TaChaine):  # On s'assure que la taille demandée est inférieure ou égale à la taille de TaChaine\n",
-    "    taille = int(input(\"a taille de la sous-chaîne ne peut pas être plus grande que la longueur de TaChaine. Entrez une nouvelle taille de sous-chaine : \"))\n",
-    "for i in range(len(TaChaine)-taille+1): # On parcourt TaChaine jusqu'à la taille de TaChaine - la taille de la sous-chaine + 1 pour ne pas dépasser la taille de TaChaine\n",
-    "    print(TaChaine[i:i+taille]) # On affiche la sous-chaine de taille taille à partir de l'indice i\n",
     "\n",
+    "sous_chaine_taille = int(input(\"Entrez la taille de la sous-chaîne à rechercher : \"))\n",
+    "while sous_chaine_taille > len(TaChaine):\n",
+    "    sous_chaine_taille = int(input(\"La taille doit être inférieure ou égale à la longueur de TaChaine. Entrez à nouveau la taille : \"))\n",
+    "\n",
+    "sous_chaine = TaChaine[:sous_chaine_taille]\n",
+    "print(f\"Sous-chaîne de taille {sous_chaine_taille} : {sous_chaine}\")\n",
     "print(\"\\n\")\n",
     "\n",
     "# 8. Transformer TaChaine en une liste triée puis l’afficher.\n",
@@ -164,14 +165,7 @@
     "\n",
     "\n",
     "\n",
-    "# Question 7 bis\n",
     "\n",
-    "# sous_chaine_taille = int(input(\"Entrez la taille de la sous-chaîne à rechercher : \"))\n",
-    "# while sous_chaine_taille > len(TaChaine):\n",
-    "#     sous_chaine_taille = int(input(\"La taille doit être inférieure ou égale à la longueur de TaChaine. Entrez à nouveau la taille : \"))\n",
-    "\n",
-    "# sous_chaine = TaChaine[:sous_chaine_taille]\n",
-    "# print(f\"Sous-chaîne de taille {sous_chaine_taille} : {sous_chaine}\")\n",
     "\n",
     "\n",
     "\n",
@@ -207,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -215,23 +209,25 @@
      "output_type": "stream",
      "text": [
       "Question 1 : Liste 1 : \n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n",
       "Question 2 : Liste 2 : \n",
-      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49]\n",
       "Question 3 : Liste 1 et Liste 2 triées en ordre décroissant : \n",
-      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
-      "[19, 17, 15, 13, 11, 9, 7, 5, 3, 1]\n",
-      "Question 4 : Liste 1 avec le nombre ajouté : \n",
-      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 10]\n",
-      "Question 5 : Liste 1 sans le nombre supprimé : \n",
-      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
-      "Question 6 : Liste 3 : \n",
-      "[8, 19, 17, 7, 36, 29, 2, 37, 35, 20, 32, 1, 23, 6, 15, 21, 5, 30, 23, 26, 23, 16, 35, 39, 14, 26, 31, 25, 34, 16, 11, 5, 40, 13, 4, 18, 13, 37, 8, 13, 7, 5, 17, 17, 13, 9, 5, 13, 7]\n",
-      "Questions 7 : Liste inversée \n",
-      "[7, 13, 5, 9, 13, 17, 17, 5, 7, 13, 8, 37, 13, 18, 4, 13, 40, 5, 11, 16, 34, 25, 31, 26, 14, 39, 35, 16, 23, 26, 23, 30, 5, 21, 15, 6, 23, 1, 32, 20, 35, 37, 2, 29, 36, 7, 17, 19, 8]\n",
-      "Question 8 : Liste des nombres pairs et impairs : \n",
-      "[19, 15, 11, 7, 3]\n",
-      "[39, 37, 35, 33, 31, 29, 27, 25, 23, 21, 19, 17, 15, 13, 11, 8, 6, 4, 2]\n"
+      "[50, 49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[49, 47, 45, 43, 41, 39, 37, 35, 33, 31, 29, 27, 25, 23, 21, 19, 17, 15, 13, 11, 9, 7, 5, 3, 1]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 60\u001b[0m\n\u001b[0;32m     57\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChoix invalide.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     58\u001b[0m         choix()\n\u001b[1;32m---> 60\u001b[0m \u001b[43mchoix\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;66;03m### 5 ###\u001b[39;00m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msupprimer_liste1\u001b[39m():\n",
+      "Cell \u001b[1;32mIn[3], line 55\u001b[0m, in \u001b[0;36mchoix\u001b[1;34m()\u001b[0m\n\u001b[0;32m     53\u001b[0m     ajout_liste1()\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m choix \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124me\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 55\u001b[0m     \u001b[43majout_liste1_emplacement\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChoix invalide.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[3], line 46\u001b[0m, in \u001b[0;36majout_liste1_emplacement\u001b[1;34m()\u001b[0m\n\u001b[0;32m     44\u001b[0m ajout \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez un nombre à ajouter à la liste: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     45\u001b[0m emplacement \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez un emplacement pour ajouter le nombre: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 46\u001b[0m Liste1\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43memplacement\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mint\u001b[39m(ajout))\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuestion 4 : Liste 1 avec le nombre ajouté à l\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124memplacement spécifique : \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     48\u001b[0m \u001b[38;5;28mprint\u001b[39m(Liste1)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -370,10 +366,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 1 :\n",
+      "{'PC1': {'CPU': 'Intel', 'GPU': '4060', 'RAM': '32', 'Stockage': '50', 'OS': 'win'}, 'PC2': {'CPU': 'Intel', 'GPU': '4070', 'RAM': '16', 'Stockage': '100', 'OS': 'lin'}, 'PC3': {'CPU': 'Amd', 'GPU': '4050', 'RAM': '64', 'Stockage': '150', 'OS': 'win'}}\n",
+      "\n",
+      "\n",
+      "Question 2 :\n",
+      "CPU\n",
+      "GPU\n",
+      "RAM\n",
+      "Stockage\n",
+      "OS\n",
+      "\n",
+      "\n",
+      "Question 3 :\n",
+      "Intel 4060 32 50 win\n",
+      "Intel 4070 16 100 lin\n",
+      "Amd 4050 64 150 win\n",
+      "\n",
+      "\n",
+      "Question 4 :\n",
+      "['CPU', 'GPU', 'RAM', 'Stockage', 'OS']\n",
+      "\n",
+      "\n",
+      "Question 5 :\n",
+      "dict_values(['Intel', '4060', '32', '50', 'win'])\n",
+      "dict_values(['Intel', '4070', '16', '100', 'lin'])\n",
+      "dict_values(['Amd', '4050', '64', '150', 'win'])\n",
+      "\n",
+      "\n",
+      "Question 6 :\n",
+      "Question 7 :\n",
+      "PC2 {'CPU': 'Intel', 'GPU': '4070', 'RAM': '16', 'Stockage': '100', 'OS': 'lin'}\n",
+      "PC3 {'CPU': 'Amd', 'GPU': '4050', 'RAM': '64', 'Stockage': '150', 'OS': 'win'}\n",
+      "PC1 {'CPU': 'Intel', 'GPU': '4060', 'RAM': '32', 'Stockage': '50', 'OS': 'win'}\n",
+      "\n",
+      "\n",
+      "Question 8 :\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[32], line 91\u001b[0m\n\u001b[0;32m     88\u001b[0m     My_PC[pc][param1], My_PC[pc][param2] \u001b[38;5;241m=\u001b[39m My_PC[pc][param2], My_PC[pc][param1]\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28mprint\u001b[39m(My_PC)\n\u001b[1;32m---> 91\u001b[0m \u001b[43minverser_parametres\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMy_PC\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     94\u001b[0m \u001b[38;5;66;03m# 9. Proposer une fonction permettant la sauvegarde de My_PC dans un autre dictionnaire CP_MyPC.\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[32], line 88\u001b[0m, in \u001b[0;36minverser_parametres\u001b[1;34m(My_PC)\u001b[0m\n\u001b[0;32m     86\u001b[0m param1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez le premier paramètre à échanger: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     87\u001b[0m param2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez le deuxième paramètre à échanger: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 88\u001b[0m My_PC[pc][param1], My_PC[pc][param2] \u001b[38;5;241m=\u001b[39m \u001b[43mMy_PC\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpc\u001b[49m\u001b[43m]\u001b[49m[param2], My_PC[pc][param1]\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28mprint\u001b[39m(My_PC)\n",
+      "\u001b[1;31mKeyError\u001b[0m: '1'"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Proposer une création et une initialisation interactive de My_PC et pour chaque dictionnaire de pc l'ajouté dans le  dico principal My_PC.\n",
+    "print(\"Question 1 :\")\n",
+    "My_PC = {}\n",
+    "N = int(input(\"Entrez le nombre de PC à ajouter: \"))\n",
+    "for i in range(1, N+1):\n",
+    "    pc = {}\n",
+    "    pc[\"CPU\"] = input(\"Entrez le CPU: \")\n",
+    "    pc[\"GPU\"] = input(\"Entrez le GPU: \")\n",
+    "    pc[\"RAM\"] = input(\"Entrez la quantité de RAM: \")\n",
+    "    pc[\"Stockage\"] = input(\"Entrez la quantité de stockage: \")\n",
+    "    pc[\"OS\"] = input(\"Entrez le système d'exploitation: \")\n",
+    "    My_PC[\"PC\"+str(i)] = pc\n",
+    "print(My_PC)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 2. Afficher par une fonction paramétrable les clés du PC1 de My_PC.\n",
+    "print(\"Question 2 :\")\n",
+    "\n",
+    "first_key = next(iter(My_PC))  # Obtenir la première clé\n",
+    "\n",
+    "def afficher_cles_pc1(My_PC):\n",
+    "    for key in My_PC[first_key]:\n",
+    "        print(key)\n",
+    "\n",
+    "afficher_cles_pc1(My_PC)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "# 3. Afficher par une fonction paramétrable les valeurs de My_PC pour chaque pc.\n",
+    "print(\"Question 3 :\")\n",
+    "def afficher_valeurs(My_PC):\n",
+    "    for key, value in My_PC.items():\n",
+    "        print(\" \".join(value.values()))\n",
+    "\n",
+    "afficher_valeurs(My_PC)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 4. Proposer une fonction permettant l’extraction des clés dans une liste.\n",
+    "print(\"Question 4 :\")\n",
+    "def extraction_cles(My_PC):\n",
+    "    cles = []\n",
+    "    for key in My_PC[first_key]:\n",
+    "        cles.append(key)\n",
+    "    print(cles)\n",
+    "\n",
+    "extraction_cles(My_PC)\n",
+    "print(\"\\n\")\n",
+    "# 5. Proposer une fonction permettant l’extraction des valeurs dans une liste.\n",
+    "print(\"Question 5 :\")\n",
+    "def extraction_valeurs(My_PC):\n",
+    "    for key, value in My_PC.items():\n",
+    "        print(value.values())\n",
+    "\n",
+    "    \n",
+    "\n",
+    "extraction_valeurs(My_PC)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 6. Proposer une fonction permettant la correction de quantité de RAM.\n",
+    "print(\"Question 6 :\")\n",
+    "def correction_ram(My_PC):\n",
+    "    pc = input(\"Entrez le PC à modifier: \")\n",
+    "    My_PC[pc][\"RAM\"] = input(\"Entrez la nouvelle quantité de RAM: \")\n",
+    "    print(My_PC)\n",
+    "\n",
+    "correction_ram(My_PC)\n",
+    "print(\"\\n\")\n",
+    "# 7. Proposer une fonction permettant le tri de My_PC selon la quantité de sockage.\n",
+    "print(\"Question 7 :\")\n",
+    "def tri_stockage(My_PC):\n",
+    "    for key, value in sorted(My_PC.items(), key=lambda x: x[1][\"Stockage\"]):\n",
+    "        print(key, value)\n",
+    "\n",
+    "tri_stockage(My_PC)\n",
+    "print(\"\\n\")\n",
+    "# 8. Proposer une fonction permettant d’inverser deux paramètres du dictionnaire.\n",
+    "print(\"Question 8 :\")\n",
+    "def inverser_parametres(My_PC):\n",
+    "    pc = input(\"Entrez le PC à modifier: \")\n",
+    "    param1 = input(\"Entrez le premier paramètre à échanger: \")\n",
+    "    param2 = input(\"Entrez le deuxième paramètre à échanger: \")\n",
+    "    My_PC[pc][param1], My_PC[pc][param2] = My_PC[pc][param2], My_PC[pc][param1]\n",
+    "    print(My_PC)\n",
+    "\n",
+    "inverser_parametres(My_PC)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# 9. Proposer une fonction permettant la sauvegarde de My_PC dans un autre dictionnaire CP_MyPC.\n",
+    "print(\"Question 9 :\")\n",
+    "def sauvegarde(nom, My_PC):\n",
+    "    CP_MyPC = My_PC.copy()\n",
+    "    print(nom, CP_MyPC)\n",
+    "\n",
+    "sauvegarde(\"CP_MyPC\", My_PC)\n",
+    "print(\"\\n\")\n",
+    "# 10. Proposer une fonction affichant le PC le plus performant de My_PC.\n",
+    "print(\"Question 10 :\")\n",
+    "def pc_plus_performant(My_PC):\n",
+    "    for key, value in sorted(My_PC.items(), key=lambda x: x[1][\"RAM\"]):\n",
+    "        print(key, value)\n",
+    "\n",
+    "pc_plus_performant(My_PC)\n"
+   ]
   }
  ],
  "metadata": {
