--- a/CC.ipynb
+++ b/CC.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
      "output_type": "stream",
      "text": [
       "Question 2:\n",
-      "abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz\n",
+      "abcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyzabcdefghijklmnopqrstuvwxyz\n",
       "\n",
       "\n",
       "Question 3:\n",
@@ -50,11 +50,11 @@
       "\n",
       "\n",
       "Question 4:\n",
-      "AbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYz\n",
+      "AbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYz\n",
       "\n",
       "\n",
       "Question 5:\n",
-      "zYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbA\n",
+      "zYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbA\n",
       "\n",
       "\n",
       "Question 6:\n",
@@ -78,21 +78,10 @@
       "\n",
       "\n",
       "Question 7:\n",
-      "jklmno\n",
-      "klmnop\n",
-      "lmnopq\n",
-      "mnopqr\n",
-      "nopqrs\n",
-      "opqrst\n",
-      "pqrstu\n",
-      "qrstuv\n",
-      "rstuvw\n",
-      "stuvwx\n",
-      "tuvwxy\n",
-      "uvwxyz\n",
+      "Sous-chaîne de taille 2 : jk\n",
       "\n",
       "\n",
-      "Question 8 bis:\n",
+      "Question 8:\n",
       "['j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
       "\n",
       "\n"
@@ -366,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +363,7 @@
      "output_type": "stream",
      "text": [
       "Question 1 :\n",
-      "{'PC1': {'CPU': 'Intel', 'GPU': '4060', 'RAM': '32', 'Stockage': '50', 'OS': 'win'}, 'PC2': {'CPU': 'Intel', 'GPU': '4070', 'RAM': '16', 'Stockage': '100', 'OS': 'lin'}, 'PC3': {'CPU': 'Amd', 'GPU': '4050', 'RAM': '64', 'Stockage': '150', 'OS': 'win'}}\n",
+      "{'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '32', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': 'amd', 'GPU': '3060', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
       "\n",
       "\n",
       "Question 2 :\n",
@@ -386,9 +375,9 @@
       "\n",
       "\n",
       "Question 3 :\n",
-      "Intel 4060 32 50 win\n",
-      "Intel 4070 16 100 lin\n",
-      "Amd 4050 64 150 win\n",
+      "intel 4060 32 600 win\n",
+      "intel 4090 128 50 win\n",
+      "amd 3060 426 400 win\n",
       "\n",
       "\n",
       "Question 4 :\n",
@@ -396,31 +385,33 @@
       "\n",
       "\n",
       "Question 5 :\n",
-      "dict_values(['Intel', '4060', '32', '50', 'win'])\n",
-      "dict_values(['Intel', '4070', '16', '100', 'lin'])\n",
-      "dict_values(['Amd', '4050', '64', '150', 'win'])\n",
+      "dict_values(['intel', '4060', '32', '600', 'win'])\n",
+      "dict_values(['intel', '4090', '128', '50', 'win'])\n",
+      "dict_values(['amd', '3060', '426', '400', 'win'])\n",
       "\n",
       "\n",
       "Question 6 :\n",
+      "{'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': 'amd', 'GPU': '3060', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
+      "\n",
+      "\n",
       "Question 7 :\n",
-      "PC2 {'CPU': 'Intel', 'GPU': '4070', 'RAM': '16', 'Stockage': '100', 'OS': 'lin'}\n",
-      "PC3 {'CPU': 'Amd', 'GPU': '4050', 'RAM': '64', 'Stockage': '150', 'OS': 'win'}\n",
-      "PC1 {'CPU': 'Intel', 'GPU': '4060', 'RAM': '32', 'Stockage': '50', 'OS': 'win'}\n",
+      "PC3 {'CPU': 'amd', 'GPU': '3060', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}\n",
+      "PC2 {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}\n",
+      "PC1 {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}\n",
       "\n",
       "\n",
-      "Question 8 :\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'1'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 91\u001b[0m\n\u001b[0;32m     88\u001b[0m     My_PC[pc][param1], My_PC[pc][param2] \u001b[38;5;241m=\u001b[39m My_PC[pc][param2], My_PC[pc][param1]\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28mprint\u001b[39m(My_PC)\n\u001b[1;32m---> 91\u001b[0m \u001b[43minverser_parametres\u001b[49m\u001b[43m(\u001b[49m\u001b[43mMy_PC\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     94\u001b[0m \u001b[38;5;66;03m# 9. Proposer une fonction permettant la sauvegarde de My_PC dans un autre dictionnaire CP_MyPC.\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[32], line 88\u001b[0m, in \u001b[0;36minverser_parametres\u001b[1;34m(My_PC)\u001b[0m\n\u001b[0;32m     86\u001b[0m param1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez le premier paramètre à échanger: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     87\u001b[0m param2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez le deuxième paramètre à échanger: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 88\u001b[0m My_PC[pc][param1], My_PC[pc][param2] \u001b[38;5;241m=\u001b[39m \u001b[43mMy_PC\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpc\u001b[49m\u001b[43m]\u001b[49m[param2], My_PC[pc][param1]\n\u001b[0;32m     89\u001b[0m \u001b[38;5;28mprint\u001b[39m(My_PC)\n",
-      "\u001b[1;31mKeyError\u001b[0m: '1'"
+      "Question 8 :\n",
+      "{'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': '3060', 'GPU': 'amd', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
+      "\n",
+      "\n",
+      "Question 9 :\n",
+      "CP_MyPC {'PC1': {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}, 'PC2': {'CPU': 'intel', 'GPU': '4090', 'RAM': '128', 'Stockage': '50', 'OS': 'win'}, 'PC3': {'CPU': '3060', 'GPU': 'amd', 'RAM': '426', 'Stockage': '400', 'OS': 'win'}}\n",
+      "sauvegarde réussie\n",
+      "\n",
+      "\n",
+      "Question 10 :\n",
+      "PC1 {'CPU': 'intel', 'GPU': '4060', 'RAM': '1000', 'Stockage': '600', 'OS': 'win'}\n",
+      "PC le plus performant :  PC1\n"
      ]
     }
    ],
@@ -503,6 +494,7 @@
     "# 7. Proposer une fonction permettant le tri de My_PC selon la quantité de sockage.\n",
     "print(\"Question 7 :\")\n",
     "def tri_stockage(My_PC):\n",
+    "    # Tri par 'Stockage' en prenant soin de traiter le stockage comme un entier\n",
     "    for key, value in sorted(My_PC.items(), key=lambda x: x[1][\"Stockage\"]):\n",
     "        print(key, value)\n",
     "\n",
@@ -511,7 +503,7 @@
     "# 8. Proposer une fonction permettant d’inverser deux paramètres du dictionnaire.\n",
     "print(\"Question 8 :\")\n",
     "def inverser_parametres(My_PC):\n",
-    "    pc = input(\"Entrez le PC à modifier: \")\n",
+    "    pc = input(\"Entrez le PC à modifier ( mettre : PC suvi de son numéro) : \")\n",
     "    param1 = input(\"Entrez le premier paramètre à échanger: \")\n",
     "    param2 = input(\"Entrez le deuxième paramètre à échanger: \")\n",
     "    My_PC[pc][param1], My_PC[pc][param2] = My_PC[pc][param2], My_PC[pc][param1]\n",
@@ -527,12 +519,14 @@
     "    print(nom, CP_MyPC)\n",
     "\n",
     "sauvegarde(\"CP_MyPC\", My_PC)\n",
+    "print(\"sauvegarde réussie\")\n",
     "print(\"\\n\")\n",
     "# 10. Proposer une fonction affichant le PC le plus performant de My_PC.\n",
     "print(\"Question 10 :\")\n",
     "def pc_plus_performant(My_PC):\n",
-    "    for key, value in sorted(My_PC.items(), key=lambda x: x[1][\"RAM\"]):\n",
-    "        print(key, value)\n",
+    "    pc = max(My_PC, key=lambda x: int(My_PC[x][\"RAM\"]))\n",
+    "    print(pc, My_PC[pc])\n",
+    "    print(\"PC le plus performant : \", pc)\n",
     "\n",
     "pc_plus_performant(My_PC)\n"
    ]
