--- a/CC.ipynb
+++ b/CC.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,14 +49,17 @@
       "jklmnopqrstuvwxyz\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 4:\n",
       "AbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYzAbCdEfGhIjKlMnOpQrStUvWxYz\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 5:\n",
       "zYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbAzYxWvUtSrQpOnMlKjIhGfEdCbA\n",
       "\n",
       "\n",
+      "-------------------\n",
       "Question 6:\n",
       "j\n",
       "jk\n",
@@ -77,96 +80,90 @@
       "jklmnopqrstuvwxyz\n",
       "\n",
       "\n",
-      "Question 7:\n",
-      "Sous-chaîne de taille 2 : jk\n",
-      "\n",
-      "\n",
-      "Question 8:\n",
-      "['j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-      "\n",
-      "\n"
+      "Question 7:\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 52\u001b[0m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;66;03m# 7. Rechercher une sous chaine dont la taille est paramétrable dans TaChaine en affichant cette taille.\u001b[39;00m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuestion 7:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 52\u001b[0m sous_chaine_taille \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEntrez la taille de la sous-chaîne à rechercher : \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m sous_chaine_taille \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mlen\u001b[39m(TaChaine):\n\u001b[0;32m     54\u001b[0m     sous_chaine_taille \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLa taille doit être inférieure ou égale à la longueur de TaChaine. Entrez à nouveau la taille : \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
    "source": [
-    "\n",
     "N=int(input(\"Entrez un nombre entier égal ou supérieur à 5: \"))\n",
     "while N < 5:\n",
     "    N = int(input(\"N doit être supérieur ou égal à 5. Entrez à nouveau N : \"))\n",
     "\n",
-    "# 1. Créer et d’initialiser toute chaine de caractères dont MaChaine.\n",
-    "\n",
+    "### 1 ###\n",
+    "#  Créer et d’initialiser toute chaine de caractères dont MaChaine.\n",
     "MaChaine= \"abcdefghijklmnopqrstuvwxyz\" * N\n",
     "\n",
-    "# 2. Afficher la chaine MaChaine.\n",
+    "### 2 ###\n",
+    "#  Afficher la chaine MaChaine.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 2:\")\n",
     "print(MaChaine)\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 3. Recopier les 17 derniers caractères de MaChaine dans TaChaine.\n",
-    "\n",
+    "### 3 ###\n",
+    "#  Recopier les 17 derniers caractères de MaChaine dans TaChaine.\n",
     "TaChaine= MaChaine[-17:] # On prend les 17 derniers caractères de MaChaine\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 3:\")\n",
     "print(TaChaine)\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 4. Transformer Machaine de manière à contenir alternativement un caractère en minuscule et le suivant en majuscule.\n",
-    "\n",
+    "### 4 ###\n",
+    "#  Transformer Machaine de manière à contenir alternativement un caractère en minuscule et le suivant en majuscule.\n",
     "for i in range(0, len(MaChaine), 2): # On commence à 0 et on incrémente de 2\n",
     "    MaChaine= MaChaine[:i] + MaChaine[i].upper() + MaChaine[i+1:] # On met en majuscule le caractère à l'indice i et on le remet dans la chaine MaChaine\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 4:\")\n",
     "print(MaChaine)\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 5. Inverser la chaine MaChaine puis l’afficher.\n",
-    "\n",
+    "### 5 ### \n",
+    "# Inverser la chaine \"MaChaine\" puis l’afficher.\n",
     "MaChaine= MaChaine[::-1] # On inverse la chaine\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 5:\")\n",
     "print(MaChaine)\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 6. Construire une pyramide avec TaChaine puis l’afficher.\n",
+    "### 6 ###\n",
+    "#  Construire une pyramide avec TaChaine puis l’afficher.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 6:\")\n",
     "for i in range(1, len(TaChaine)+1): # On commence à 1 et on incrémente de 1 jusqu'à la taille de TaChaine\n",
     "    print(TaChaine[:i]) # On affiche les i premiers caractères de TaChaine\n",
     "\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 7. Rechercher une sous chaine dont la taille est paramétrable dans TaChaine en affichant cette taille.\n",
+    "### 7 ###\n",
+    "#  Rechercher une sous chaine dont la taille est paramétrable dans TaChaine en affichant cette taille.\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 7:\")\n",
-    "\n",
     "sous_chaine_taille = int(input(\"Entrez la taille de la sous-chaîne à rechercher : \"))\n",
     "while sous_chaine_taille > len(TaChaine):\n",
     "    sous_chaine_taille = int(input(\"La taille doit être inférieure ou égale à la longueur de TaChaine. Entrez à nouveau la taille : \"))\n",
-    "\n",
     "sous_chaine = TaChaine[:sous_chaine_taille]\n",
     "print(f\"Sous-chaîne de taille {sous_chaine_taille} : {sous_chaine}\")\n",
     "print(\"\\n\")\n",
     "\n",
-    "# 8. Transformer TaChaine en une liste triée puis l’afficher.\n",
-    "\n",
+    "### 8 ###\n",
+    "#  Transformer TaChaine en une liste triée puis l’afficher.\n",
     "TaChaine= list(TaChaine) # On transforme TaChaine en liste\n",
     "TaChaine.sort() # On trie la liste\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 8:\")\n",
     "print(TaChaine)\n",
-    "print(\"\\n\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"\\n\")"
    ]
   },
   {
@@ -190,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -198,30 +195,39 @@
      "output_type": "stream",
      "text": [
       "Question 1 : Liste 1 : \n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]\n",
+      "-------------------\n",
       "Question 2 : Liste 2 : \n",
-      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39]\n",
+      "-------------------\n",
       "Question 3 : Liste 1 et Liste 2 triées en ordre décroissant : \n",
-      "[50, 49, 48, 47, 46, 45, 44, 43, 42, 41, 40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
-      "[49, 47, 45, 43, 41, 39, 37, 35, 33, 31, 29, 27, 25, 23, 21, 19, 17, 15, 13, 11, 9, 7, 5, 3, 1]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 60\u001b[0m\n\u001b[0;32m     57\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChoix invalide.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     58\u001b[0m         choix()\n\u001b[1;32m---> 60\u001b[0m \u001b[43mchoix\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;66;03m### 5 ###\u001b[39;00m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msupprimer_liste1\u001b[39m():\n",
-      "Cell \u001b[1;32mIn[3], line 55\u001b[0m, in \u001b[0;36mchoix\u001b[1;34m()\u001b[0m\n\u001b[0;32m     53\u001b[0m     ajout_liste1()\n\u001b[0;32m     54\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m choix \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124me\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m---> 55\u001b[0m     \u001b[43majout_liste1_emplacement\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     57\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mChoix invalide.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[3], line 46\u001b[0m, in \u001b[0;36majout_liste1_emplacement\u001b[1;34m()\u001b[0m\n\u001b[0;32m     44\u001b[0m ajout \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez un nombre à ajouter à la liste: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     45\u001b[0m emplacement \u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntrez un emplacement pour ajouter le nombre: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 46\u001b[0m Liste1\u001b[38;5;241m.\u001b[39minsert(\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43memplacement\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28mint\u001b[39m(ajout))\n\u001b[0;32m     47\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQuestion 4 : Liste 1 avec le nombre ajouté à l\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124memplacement spécifique : \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     48\u001b[0m \u001b[38;5;28mprint\u001b[39m(Liste1)\n",
-      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "[39, 37, 35, 33, 31, 29, 27, 25, 23, 21, 19, 17, 15, 13, 11, 9, 7, 5, 3, 1]\n",
+      "-------------------\n",
+      "Question 4 : Liste 1 avec le nombre ajouté : \n",
+      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 10]\n",
+      "-------------------\n",
+      "Question 5 : Liste 1 sans le nombre supprimé : \n",
+      "[40, 39, 38, 37, 36, 35, 34, 33, 32, 31, 30, 29, 28, 27, 26, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "-------------------\n",
+      "Question 6 : Liste 3 : \n",
+      "[7, 26, 21, 23, 12, 4, 4, 7, 29, 9, 23, 24, 30, 16, 3, 31, 11, 3, 37, 21, 38, 16, 29, 29, 5, 8, 16, 19, 9, 34, 30, 30, 6, 32, 1, 19, 29, 35, 17, 27, 13, 9, 11, 31, 17, 5, 1, 35, 27, 7, 35, 3, 19, 5, 39, 1, 31, 23, 5]\n",
+      "-------------------\n",
+      "Questions 7 : Liste inversée \n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39]\n",
+      "[5, 23, 31, 1, 39, 5, 19, 3, 35, 7, 27, 35, 1, 5, 17, 31, 11, 9, 13, 27, 17, 35, 29, 19, 1, 32, 6, 30, 30, 34, 9, 19, 16, 8, 5, 29, 29, 16, 38, 21, 37, 3, 11, 31, 3, 16, 30, 24, 23, 9, 29, 7, 4, 4, 12, 23, 21, 26, 7]\n",
+      "-------------------\n",
+      "Question 8 : Liste des nombres pairs et impairs : \n",
+      "[1, 5, 9, 13, 17, 21, 25, 29, 33, 37]\n",
+      "[2, 4, 6, 8, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39]\n"
      ]
     }
    ],
    "source": [
     "### 1 ###\n",
+    "#Créer et d’initialiser une liste liste1 d’entiers d’une taille paramétrable supérieure à 20.\n",
+    "\n",
     "Liste1 = []\n",
     "input1 = input(\"Entrez un nombre supérieur à 20: \")\n",
     "if int(input1) < 20:\n",
@@ -234,10 +240,12 @@
     "\n",
     "\n",
     "### 2 ###\n",
+    "#Créer et d’initialiser une liste liste2 d’entiers d’une taille paramétrable copiant les entiers impairs de liste1\n",
     "Liste2 = []\n",
     "impairs = []\n",
     "input2 = input(\"Entrez un nombre inférieur à \"+input1+\": \") ## Il faut décider si le nombre doit etre egal a input1 divisé par 2 ou non car il y a que 15 nb impairs dans 30\n",
     "if int(input2) > int(input1):\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Le nombre est supérieur à \"+input1+\".\")\n",
     "else:\n",
     "    #ajouter uniquement les nombres impairs en ajoutant le nombre de valeurs dans input2\n",
@@ -245,32 +253,39 @@
     "        if x % 2 != 0:\n",
     "            impairs.append(x)\n",
     "    Liste2 = impairs[:int(input2)]\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Question 2 : Liste 2 : \")\n",
     "    print(Liste2)\n",
     "\n",
     "### 3 ###\n",
+    "#Utiliser une fonction affichant les 2 listes triées dans un ordre décroissant\n",
     "Liste1.sort(reverse=True)\n",
     "Liste2.sort(reverse=True)\n",
+    "print(\"-------------------\")\n",
     "print(\"Question 3 : Liste 1 et Liste 2 triées en ordre décroissant : \")\n",
-    "print(Liste1)\n",
-    "print(Liste2)\n",
+    "print(\"Liste 1\",Liste1)\n",
+    "print(\"Liste 2\",Liste2)\n",
     "\n",
     "### 4 ###\n",
+    "#Utiliser une fonction ajoutant un ou plusieurs entiers à liste1 en fin de liste ou dans  emplacement spécifique\n",
     "\n",
-    "def ajout_liste1():\n",
+    "def ajout_liste1(): #Fonction pour ajouter un nombre à la fin de la liste\n",
     "    ajout = input(\"Entrez un nombre à ajouter à la liste: \")\n",
     "    Liste1.append(int(ajout))\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Question 4 : Liste 1 avec le nombre ajouté : \")\n",
     "    print(Liste1)\n",
     "\n",
-    "def ajout_liste1_emplacement():\n",
+    "def ajout_liste1_emplacement(): #Foncction pour ajouter un nombre à un emplacement spécifique\n",
     "    ajout = input(\"Entrez un nombre à ajouter à la liste: \")\n",
     "    emplacement = input(\"Entrez un emplacement pour ajouter le nombre: \")\n",
     "    Liste1.insert(int(emplacement), int(ajout))\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Question 4 : Liste 1 avec le nombre ajouté à l'emplacement spécifique : \")\n",
     "    print(Liste1)\n",
     "\n",
-    "def choix ():\n",
+    "\n",
+    "def choix (): #Fonction permettant de choisir si on veut ajouter un nombre à la fin de la liste ou à un emplacement spécifique\n",
     "    choix = input(\"Voulez-vous ajouter un nombre à la fin de la liste ou à un emplacement spécifique? (fin = f ou e = emplacement): \")\n",
     "    if choix == \"f\":\n",
     "        ajout_liste1()\n",
@@ -283,54 +298,64 @@
     "choix()\n",
     "\n",
     "### 5 ###\n",
+    "#Utiliser une fonction supprimant de liste1 toutes les occurrences d’un entier entré par l’utilisateur.\n",
     "def supprimer_liste1():\n",
     "    supprimer = input(\"Entrez un nombre à supprimer de la liste: \")\n",
-    "    for i in Liste1:\n",
-    "        if i == int(supprimer):\n",
-    "            Liste1.remove(int(supprimer))\n",
+    "    for i in Liste1: #On parcourt la liste\n",
+    "        if i == int(supprimer): #On compare chaque élément de la liste à l'entier à supprimer\n",
+    "            Liste1.remove(int(supprimer)) #On supprime l'entier de la liste\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Question 5 : Liste 1 sans le nombre supprimé : \")\n",
     "    print(Liste1)\n",
     "\n",
     "supprimer_liste1()\n",
     "\n",
     "### 6 ###\n",
+    "#Créer une liste liste3 avec des éléments aléatoires de liste1 et liste2\n",
     "Liste3 = []\n",
     "def liste3():\n",
     "    import random\n",
-    "    for i in range(0, len(Liste1)):\n",
-    "        Liste3.append(random.choice(Liste1))\n",
+    "    for i in range(0, len(Liste1)): #Parcours de la liste\n",
+    "        Liste3.append(random.choice(Liste1))#On ajoute un élément aléatoire de la liste 1 à la liste 3\n",
     "    for i in range(0, len(Liste2)):\n",
-    "        Liste3.append(random.choice(Liste2))\n",
+    "        Liste3.append(random.choice(Liste2))#On ajoute un élément aléatoire de la liste 2 à la liste 3\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Question 6 : Liste 3 : \")\n",
     "    print(Liste3)\n",
     "\n",
     "liste3()\n",
     "\n",
     "### 7 ###\n",
-    "### Est qu'il faut choisir la liste que l'on veut inverser ou est-ce que c'est la liste3 qui doit etre inversée?\n",
+    "# Utiliser une fonction qui permet d’inverser toute liste dont la liste3\n",
     "def inverser_liste():\n",
+    "    Liste1.reverse()\n",
+    "    Liste2.reverse()\n",
     "    Liste3.reverse()\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Questions 7 : Liste inversée \")\n",
-    "    print(Liste3)\n",
+    "    print(\"Liste 1 :\", Liste1)\n",
+    "    print(\"Liste 2 :\",Liste2)\n",
+    "    print(\"Liste 3 :\",Liste3)\n",
     "\n",
     "inverser_liste()\n",
     "\n",
     "### 8 ###\n",
+    "#Utiliser une fonction qui prend en paramètres les deux listes liste1 et liste2 et renvoyant une liste contenant deux sous listes (l_pairs, l_impairs)\n",
     "def indices_pairs_impairs(Liste1, Liste2):\n",
     "    l_pairs = []\n",
     "    l_impairs = []\n",
-    "    for i in range(len(Liste2)):\n",
-    "        if i % 2 == 0:\n",
-    "            l_pairs.append(Liste2[i])\n",
+    "    for i in range(len(Liste2)): #On parcourt la liste\n",
+    "        if i % 2 == 0: #Si l'indice est pair\n",
+    "            l_pairs.append(Liste2[i]) #On ajoute l'élément à la liste des pairs\n",
     "    for i in range(len(Liste1)):\n",
-    "        if i % 2 != 0:\n",
-    "            l_impairs.append(Liste1[i])\n",
+    "        if i % 2 != 0: #Si l'indice est impair\n",
+    "            l_impairs.append(Liste1[i]) #On ajoute l'élément à la liste des impairs\n",
+    "    print(\"-------------------\")\n",
     "    print(\"Question 8 : Liste des nombres pairs et impairs : \")\n",
     "    print(l_pairs,)\n",
     "    print( l_impairs)\n",
     "\n",
-    "indices_pairs_impairs(Liste1, Liste2)\n",
-    "\n"
+    "indices_pairs_impairs(Liste1, Liste2)"
    ]
   },
   {
@@ -548,7 +573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
